# kunda

./: .gitignore  manage.py  pyproject.toml  render.yaml  requirements.txt
kunda/: asgi.py  settings.py  urls.py  wsgi.py
stories/: models.py
